@@ -1,0 +1,35 @@
+
+R version 2.9.2 (2009-08-24)
+Copyright (C) 2009 The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+  Natural language support but running in an English locale
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> require(bbmle)
+Loading required package: bbmle
+> x <- 0:10
+> y <- c(26, 17, 13, 12, 20, 5, 9, 8, 5, 4, 8)
+> fit <- mle2(y~dpois(lambda=ymax/(1+x/xhalf)), start=list(ymax=25,xhalf=3))
+> fit2 <- mle2(y~dpois(lambda=(x+1)*slope), start=list(slope=1))
+> BIC(fit,nobs=length(x))
+[1] 62.0039
+> BIC(fit,fit2,nobs=length(x))
+       BIC df
+1  62.0039  2
+2 228.2046  1
+> 
+> proc.time()
+   user  system elapsed 
+  0.848   0.044   0.895 
