@@ -1,0 +1,53 @@
+
+R version 2.9.1 (2009-06-26)
+Copyright (C) 2009 The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+  Natural language support but running in an English locale
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> ## from Eric Weese
+> library(bbmle)
+> f <- function(x=2,a=1) x^2 - a
+> f.g <- function(x,a) 2*x
+> mle2(f,fixed=list(a=1)) #works
+
+Call:
+mle2(minuslogl = f, fixed = list(a = 1))
+
+Coefficients:
+           x            a 
+1.092459e-13 1.000000e+00 
+
+Log-likelihood: 1 
+> mle2(f,gr=f.g,fixed=list(a=1)) #fails 
+
+Call:
+mle2(minuslogl = f, fixed = list(a = 1), gr = f.g)
+
+Coefficients:
+x a 
+0 1 
+
+Log-likelihood: 1 
+Warning messages:
+1: In gr(par, ...) : gradient functions untested with profiling
+2: In gr(par, ...) : gradient functions untested with profiling
+3: In gr(par, ...) : gradient functions untested with profiling
+4: In gr(par, ...) : gradient functions untested with profiling
+5: In gr(par, ...) : gradient functions untested with profiling
+> 
+> proc.time()
+   user  system elapsed 
+  0.764   0.036   0.790 
